# dnois

./: .editorconfig  .gitignore  LICENSE  README.md  dev.md  pip.txt  pyproject.toml  requirements.txt
.github/workflows/: sphinx.yml
benchmark/: __init__.py
docs/: .style  conf.py  index.rst  requirements.txt
docs/_static/css/: cust_style.css
docs/_static/js/: notation.js
docs/_templates/autosummary/: class.rst  function.rst  mt_class.rst
docs/content/: api_reference.rst  getting_started.rst  tutorials.rst  user_guide.rst
docs/content/guide/: debug.rst  exparam.rst  imodel.rst  optics.rst  overview.rst  transform.rst  unit.rst
docs/content/guide/optics/: imodel.rst  rt.rst
docs/content/ref/: dnois.rst  fourier.rst  mt.rst  optics.rst  sensor.rst  torch.rst  utils.rst
docs/content/ref/optics/: df.rst  rt.rst
src/dnois/: __init__.py  depth.py  mt.py  scene.py
src/dnois/base/: __init__.py  constant.py  cptn.py  exception.py  fl.csv  infrastructure.py  physics.py  serialize.py  typing.py  unit.py
src/dnois/fourier/: __init__.py  _utils.py  conv.py  ft.py
src/dnois/optics/: __init__.py  _func.py  formation.py  system.py
src/dnois/optics/cst/: __init__.py  psf.py
src/dnois/optics/df/: __init__.py  prop.py
src/dnois/optics/rt/: __init__.py  _surf.py  lg.py  ray.py  surf.py  system.py
src/dnois/sensor/: __init__.py  _main.py  noise.py  pixel_array.py
src/dnois/torch/: __init__.py  calc.py  module.py  param_transform.py  shape.py  tensor_op.py
src/dnois/utils/: __init__.py  check.py  grid.py  image.py  misc.py  typing.py  vis.py
